Fix Submit on iOS and Payment Options Issue #23009
I changed the Submit Button gradient to use @include background-image
instead of background-color for the linear gradient.  I am hoping this
allows the gradient to appear on iOS browsers.  I also changed the
behavior of the Paymention Options section when viewed on small screens.

--- a/sites/all/themes/cc_zen/sass/components/_donate.scss
+++ b/sites/all/themes/cc_zen/sass/components/_donate.scss
@@ -42,6 +42,14 @@
       }
     }
 
+    .crm-group.payment_options-group {
+      .crm-section {
+        input {
+          width: auto;
+        }
+      } 
+    }
+
     .price_set-section,
     .is_recur-section,
     .custom_12-section {
@@ -110,7 +118,7 @@
 
     .crm-button_qf_Main_upload {
       width: 100%;
-      background: linear-gradient(color(green-medium-light), color(green-medium));
+      @include background-image(linear-gradient(color(green-medium-light), color(green-medium)));
       border-color: color(green-medium-dark);
       border-radius: 6px;
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15) inset, 0 1px 1px rgba(0, 0, 0, 0.075);
